--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,7 +30,15 @@ assetic:
     bundles:        [ ]
     #java: /usr/bin/java
     filters:
+        less:
+            node: /usr/local/bin/node
+            node_paths: [/usr/local/bin, /usr/local/lib/node_modules]
+            apply_to: "\.less$"
+
         cssrewrite: ~
+        cssembed:
+            jar: %kernel.root_dir%/Resources/java/cssembed-0.3.6.jar
+            apply_to: "\.css$|\.less$"
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
         #yui_css:
