--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
 
         "knplabs/knp-paginator-bundle": "dev-master",
         "craue/formflow-bundle": "dev-master",
-        "pimple/pimple": "dev-master"
+        "pimple/pimple": "dev-master",
+	"lexik/form-filter-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
