--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
 
 	"doctrine/data-fixtures": "dev-master",
         "mopa/bootstrap-bundle": "dev-master",
