--- a/composer.json
+++ b/composer.json
@@ -20,18 +20,16 @@
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
 
-	"doctrine/data-fixtures": "dev-master",
         "mopa/bootstrap-bundle": "dev-master",
         "mopa/composer-bridge": "dev-master",
         "twitter/bootstrap": "dev-master",
         "knplabs/knp-menu-bundle": "dev-master",
         "knplabs/knp-menu": "dev-master",
-        "willdurand/faker-bundle": "dev-master",
-
         "knplabs/knp-paginator-bundle": "dev-master",
-        "craue/formflow-bundle": "dev-master",
-        "pimple/pimple": "dev-master",
-	"lexik/form-filter-bundle": "dev-master"
+        "craue/formflow-bundle": "dev-wip-symfony-2.3",
+        "pimple/pimple": "dev-master"
+	"doctrine/data-fixtures": "dev-master",
+        "willdurand/faker-bundle": "dev-master",
     },
     "scripts": {
         "post-install-cmd": [
