--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,9 @@
         "knplabs/knp-menu": "dev-master",
         "knplabs/knp-paginator-bundle": "dev-master",
         "craue/formflow-bundle": "dev-wip-symfony-2.3",
-        "pimple/pimple": "dev-master"
+        "pimple/pimple": "dev-master",
 	"doctrine/data-fixtures": "dev-master",
-        "willdurand/faker-bundle": "dev-master",
+        "willdurand/faker-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
