--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,16 @@
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
 
-        "mopa/bootstrap-bundle": "2.3.*",
+        "mopa/bootstrap-bundle": "2.3.*@dev",
         "mopa/composer-bridge": "1.1.*",
         "twitter/bootstrap": "2.3.2",
-        "knplabs/knp-menu-bundle": "2.0.*",
-        "knplabs/knp-menu": "2.0.*",
+        "knplabs/knp-menu-bundle": "2.0.*@dev",
+        "knplabs/knp-menu": "2.0.*@dev",
         "knplabs/knp-paginator-bundle": "2.3.*",
         "pimple/pimple": "1.0.*",
 
         "craue/formflow-bundle": "dev-wip-symfony-2.3",
-	"doctrine/data-fixtures": "1.0.*",
+	"doctrine/data-fixtures": "1.0.*@dev",
         "willdurand/faker-bundle": "0.1.1"
     },
     "scripts": {
