--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,9 +38,9 @@ assetic:
             apply_to: "\.less$"
 
         cssrewrite: ~
-        cssembed:
-            jar: %kernel.root_dir%/Resources/java/cssembed-0.3.6.jar
-            apply_to: "\.css$|\.less$"
+        #cssembed:
+        #    jar: %kernel.root_dir%/Resources/java/cssembed-0.3.6.jar
+        #    apply_to: "\.css$|\.less$"
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
         #yui_css:
